--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-    <h1 style="color: brown;">my first repostry in open with live server</h1>
+    <h1 style="color: brown;">My First Repostry In Open With Live Server</h1>
 </body>
 </html>
